landing paage design

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/virtual bank logo.svg" type="image/x-icon">
     <title>Virtual Bank</title>
 
     <!-- load font -->
@@ -27,7 +28,7 @@
         <div class="bg-top">
 
         </div>
-        <div class="bg-bottom bottom-0">
+        <div class="bg-bottom position-absolute bottom-0">
 
         </div>
     </aside>
@@ -129,7 +130,7 @@
         </div>
 
 
-        <div  class="fun_about d-flex flex-wrap justify-content-evenly">
+        <div class="fun_about d-flex flex-wrap justify-content-evenly">
             <div>
                 <img class="w-100" src="images/integration.png" alt="Easy Integration">
                 <p class="fw-bold fs-3 mt-2 ps-2">Easy Integration</p>
@@ -165,8 +166,51 @@
         </div>
     </main>
 
-    <footer class="container-fluid text-white text-center py-3">
-        This is the footer
+    <footer class="container-fluid text-white py-3">
+        <div>
+            <div>
+                <h4>Disclamer</h4>
+                <p>This is a simulated banking environment intended for testing and development purposes only. All
+                    transactions and data are fictional and do not involve real-world financial operations.</p>
+            </div>
+            <div>
+                <h4>contact</h4>
+                <a href="mailto:adenijiolajid01@gmail.com">adenijiolajid01@gmail.com</a>
+                <div>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/github.svg" alt=""></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/x.svg" alt=""></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/linkedin.svg" alt=""></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/instagram.svg" alt=""></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/youtube.svg" alt=""></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/meduim.svg" alt=""></a>
+                </div>
+                <span>Safe, Simulated, Seamless Transactions</span>
+            </div>
+            <div>
+                Virtual Bank
+            </div>
+        </div>
+        <div>
+            <h4>Quick Links</h4>
+            <nav>
+                <a href="#">
+                    About Us
+                </a>
+                <a href="#">
+                    Contact Us
+                </a>
+                <a href="#">
+                    Features
+                </a>
+                <a href="#">
+                    API Documentation
+                </a>
+                <a href="#">
+                    Developer Portal
+                </a>
+            </nav>
+        </div>
+        <div><img src="images/olajide.jfif" alt="" class="rounded-circle"><span>Lagos Nigeria <br> @2023 All rights reserved</span></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
