--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,9 +18,9 @@
 
     <!-- load css -->
     <link rel="stylesheet" href="styles/background.css">
-    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/headers.css">
     <link rel="stylesheet" href="styles/body.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 
 <body class="bs5-bg card">
@@ -166,51 +166,68 @@
         </div>
     </main>
 
-    <footer class="container-fluid text-white py-3">
-        <div>
-            <div>
-                <h4>Disclamer</h4>
-                <p>This is a simulated banking environment intended for testing and development purposes only. All
-                    transactions and data are fictional and do not involve real-world financial operations.</p>
-            </div>
-            <div>
-                <h4>contact</h4>
-                <a href="mailto:adenijiolajid01@gmail.com">adenijiolajid01@gmail.com</a>
-                <div>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/github.svg" alt=""></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/x.svg" alt=""></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/linkedin.svg" alt=""></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/instagram.svg" alt=""></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/youtube.svg" alt=""></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/meduim.svg" alt=""></a>
+
+
+    <footer>
+        <div class="d-flex justify-content-evenly align-items-evnly text-white py-3 mx-5">
+            <div class="row">
+                <div class="col">
+                    <div class="mb-5">
+                        <h4 class="h3 mb-3 fw-semi-bold">Disclaimer</h4>
+                        <p class="fs-5">This is a simulated banking environment intended for testing and development
+                            purposes only. All
+                            transactions and data are fictional and do not involve real-world financial operations.</p>
+                    </div>
+                    <div class="mb-5">
+                        <h4 class="h3 mb-2">contact</h4>
+                        <a href="mailto:adenijiolajid01@gmail.com"
+                            class="fs-5 mb-5 text-decoration-none">adenijiolajid01@gmail.com</a>
+                        <div class="">
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/github.svg"
+                                    alt=""></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/x.svg"
+                                    alt=""></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/linkedin.svg"
+                                    alt=""></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img
+                                    src="images/socials/instagram.svg" alt=""></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/youtube.svg"
+                                    alt=""></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/socials/meduim.svg"
+                                    alt=""></a>
+                        </div>
+                        <span class="text-secondary fw-lighter fs-6">Safe, Simulated, Seamless Transactions</span>
+                    </div>
+                    <div class="h1">
+                        Virtual Bank
+                    </div>
                 </div>
-                <span>Safe, Simulated, Seamless Transactions</span>
-            </div>
-            <div>
-                Virtual Bank
+                <div class="col">
+                    <h4 class="mb-3">Quick Links</h4>
+                    <nav class="col row grid gap-4 fs-5">
+                        <a href="#" class="text-decoration-none">
+                            About Us
+                        </a>
+                        <a href="#" class="text-decoration-none">
+                            Contact Us
+                        </a>
+                        <a href="#" class="text-decoration-none">
+                            Features
+                        </a>
+                        <a href="#" class="text-decoration-none">
+                            API Documentation
+                        </a>
+                        <a href="#" class="text-decoration-none">
+                            Developer Portal
+                        </a>
+                    </nav>
+                </div>
+                <div class="col"><img src="images/olajide.jfif" alt="" class="rounded-circle mb-5 my_pics"><span
+                        class="row h6 float-end">Lagos Nigeria <br> @2023 All
+                        rights
+                        reserved</span></div>
             </div>
         </div>
-        <div>
-            <h4>Quick Links</h4>
-            <nav>
-                <a href="#">
-                    About Us
-                </a>
-                <a href="#">
-                    Contact Us
-                </a>
-                <a href="#">
-                    Features
-                </a>
-                <a href="#">
-                    API Documentation
-                </a>
-                <a href="#">
-                    Developer Portal
-                </a>
-            </nav>
-        </div>
-        <div><img src="images/olajide.jfif" alt="" class="rounded-circle"><span>Lagos Nigeria <br> @2023 All rights reserved</span></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
