--- a/home/index.html
+++ b/home/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="images/virtual bank logo.svg" type="image/x-icon">
     <title>Virtual Bank</title>
 
+    <script src="scripts/main.js" defer></script>
+
     <!-- load font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,8 +51,8 @@
             </div>
             <div class="col-12 col-sm-auto text-center text-md-end">
                 <div class="register">
-                    <a href="#" class="text-decoration-none text-white mx-2 link-primary">Sign In</a>
-                    <a href="#" class="text-decoration-none text-white mx-2 btn  btn-primary rounded-pill">Sign Up</a>
+                    <a href="#" class="text-decoration-none text-white mx-2 link-primary" id="signin">Sign In</a>
+                    <a href="#" class="text-decoration-none text-white mx-2 btn  btn-primary rounded-pill" id="signup">Sign Up</a>
                 </div>
             </div>
         </div>
