--- a/index.html
+++ b/index.html
@@ -7,122 +7,343 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-
-    header {
-        background-color: #007bff;
-        color: #fff;
+    /* User Info Section */
+    .user-info {
+        display: flex;
+        align-items: center;
+        background-color: #fff;
         padding: 20px;
-        text-align: center;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-    .container {
-        width: 80%;
-        margin: 20px auto;
+    /* User Avatar */
+    .user-avatar {
+        width: 60px;
+        height: 60px;
+        background-color: #3498db;
+        color: #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        margin-right: 20px;
     }
 
-    .account-details,
-    .transactions {
-        margin-bottom: 30px;
-        border: 1px solid #ccc;
-        padding: 15px;
+    /* User Details */
+    .user-details h2 {
+        margin: 0;
+        color: #333;
     }
 
-    .account-details h2,
-    .transactions h2 {
+    .account-details {
+        margin: 5px 0;
+        color: #555;
+        font-size: 14px;
+    }
+
+    /* Transaction Partner Section */
+    .transaction-partner {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .transaction-partner h2 {
         margin-top: 0;
+        color: #333;
     }
 
-    #transaction-list {
-        list-style: none;
-        padding: 0;
+    .partner-list {
+        margin-top: 15px;
     }
 
-    #transaction-list li {
+    .partner-item {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 8px;
+    }
+
+    .partner-name {
+        color: #555;
+        font-weight: bold;
+    }
+
+    .partner-count {
+        color: #777;
+        font-size: 14px;
+    }
+
+    /* Recent Transactions Section */
+    .recent-transactions {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .recent-transactions h2 {
+        margin-top: 0;
+        color: #333;
+    }
+
+    .transaction-item {
+        display: flex;
+        justify-content: space-between;
         margin-bottom: 10px;
+        border-bottom: 1px solid #eee;
+        padding-bottom: 5px;
+    }
+
+    .transaction-type {
+        color: #555;
+        font-weight: bold;
+    }
+
+    .transaction-amount {
+        color: #333;
+    }
+
+    .transaction-date {
+        color: #777;
+        font-size: 14px;
+    }
+
+    /* Quick Actions Section */
+    .quick-actions {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    .quick-action {
+        padding: 15px 30px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .quick-action:nth-child(1) {
+        background-color: #3498db;
+        color: #fff;
+    }
+
+    .quick-action:nth-child(2) {
+        background-color: #27ae60;
+        color: #fff;
+    }
+
+    .quick-action:hover {
+        filter: brightness(90%);
+    }
+
+    /* Spending Graph Section */
+    .spending-graph {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .spending-graph h2 {
+        margin-top: 0;
+        color: #333;
+    }
+
+    /* Balance Info Section */
+    .balance-info {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .balance-info h2 {
+        margin-top: 0;
+        color: #333;
+    }
+
+    .balance-amount {
+        font-size: 24px;
+        color: #27ae60;
+        margin: 10px 0;
     }
 </style>
 
 <body>
-    <header>
-        <h1>Welcome to Your Banking Dashboard</h1>
-    </header>
-
-    <div class="container">
-        <section class="account-details">
-            <h2>Account Information</h2>
-            <p>Account Number: <span id="account-number">1234567890</span></p>
-            <p>Balance: $<span id="balance">1000</span></p>
-        </section>
-
-        <section class="transactions">
-            <h2>Recent Transactions</h2>
-            <ul id="transaction-list">
-                <!-- Transaction items will be populated here -->
-            </ul>
-        </section>
+    <div class="user-info">
+        <div class="user-avatar">
+            <!-- User Avatar or Initials -->
+        </div>
+        <div class="user-details">
+            <h2>User Full Name</h2>
+            <p class="account-details">Balance: $XXXX</p>
+            <p class="account-details">Account Number: XXXXXXXXXX</p>
+        </div>
     </div>
-    <!-- Add this within the body tag -->
-    <section class="chart">
-        <h2>Account Balance Over Time</h2>
-        <canvas id="balance-chart" width="400" height="200"></canvas>
-    </section>
+
+    <div class="transaction-partner">
+        <h2>Most Used Transaction Partner</h2>
+        <div class="partner-list">
+            <div class="partner-item">
+                <span class="partner-name">Partner Name 1</span>
+                <span class="partner-count">25 transactions</span>
+            </div>
+            <div class="partner-item">
+                <span class="partner-name">Partner Name 2</span>
+                <span class="partner-count">20 transactions</span>
+            </div>
+            <!-- Add more partner items as needed -->
+        </div>
+    </div>
+
+    <div class="recent-transactions">
+        <h2>Recent Transactions</h2>
+        <div class="transaction-item">
+            <span class="transaction-type">Deposit</span>
+            <span class="transaction-amount">+$500</span>
+            <span class="transaction-date">Dec 20, 2023</span>
+        </div>
+        <div class="transaction-item">
+            <span class="transaction-type">Payment</span>
+            <span class="transaction-amount">-$120</span>
+            <span class="transaction-date">Dec 18, 2023</span>
+        </div>
+        <!-- Add more transaction items as needed -->
+    </div>
+
+    <div class="quick-actions">
+        <button class="quick-action">Quick Transfer</button>
+        <button class="quick-action">Quick Deposit</button>
+    </div>
+
+    <div class="spending-graph">
+        <h2>Spending Graph</h2>
+        <canvas id="spendingChart"></canvas>
+    </div>
+
+    <div class="balance-info">
+        <h2>Your Balance</h2>
+        <p class="balance-amount">$XXXX</p>
+    </div>
+
+    <div class="transaction-type-chart">
+        <h2>Most Used Transaction Type</h2>
+        <canvas id="transactionTypeChart"></canvas>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <script>
-        // Simulated data for account details and transactions
-        const accountNumber = "1234567890";
-        let balance = 1000;
-        const transactions = [
-            { id: 1, description: "Supermarket", amount: -50 },
-            { id: 2, description: "Salary Deposit", amount: 1500 },
-            { id: 3, description: "Restaurant", amount: -80 },
-        ];
+        // Sample spending data (replace this with your actual data)
+        const spendingData = {
+            labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun"],
+            datasets: [
+                {
+                    label: "Spending",
+                    data: [500, 800, 650, 900, 700, 1000],
+                    fill: false,
+                    borderColor: "#3498db",
+                    backgroundColor: "#3498db",
+                    tension: 0.4
+                }
+            ]
+        };
 
-        // Display account details
-        document.getElementById("account-number").innerText = accountNumber;
-        document.getElementById("balance").innerText = balance;
+        // Get the canvas element
+        const spendingCanvas = document.getElementById("spendingChart").getContext("2d");
 
-        // Display recent transactions
-        const transactionList = document.getElementById("transaction-list");
-        transactions.forEach((transaction) => {
-            const listItem = document.createElement("li");
-            listItem.innerHTML = `${transaction.description}: $${transaction.amount}`;
-            transactionList.appendChild(listItem);
+        // Create the spending chart using Chart.js
+        const mySpendingChart = new Chart(spendingCanvas, {
+            type: "line",
+            data: spendingData,
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        display: true,
+                        position: "top"
+                    },
+                    title: {
+                        display: false
+                    }
+                },
+                scales: {
+                    x: {
+                        display: true,
+                        title: {
+                            display: true,
+                            text: "Month",
+                            color: "#333",
+                            font: {
+                                size: 14,
+                                weight: "bold"
+                            }
+                        },
+                        ticks: {
+                            color: "#555"
+                        }
+                    },
+                    y: {
+                        display: true,
+                        title: {
+                            display: true,
+                            text: "Amount",
+                            color: "#333",
+                            font: {
+                                size: 14,
+                                weight: "bold"
+                            }
+                        },
+                        ticks: {
+                            color: "#555"
+                        }
+                    }
+                }
+            }
         });
 
-        // Create a line chart
-        const ctx = document.getElementById("balance-chart").getContext("2d");
-        const balanceChart = new Chart(ctx, {
-            type: "line",
-            data: {
-                labels: ["1", "2", "3", "4", "5", "6"],
-                datasets: [
-                    {
-                        label: "Account Balance",
-                        data: [1000, 950, 900, 930, 1000, 950],
-                        backgroundColor: "rgba(0, 123, 255, 0.2)",
-                        borderColor: "rgba(0, 123, 255, 1)",
-                        borderWidth: 1,
-                    },
-                ],
-            },
+        // Sample data for transaction types (replace with your actual data)
+        const transactionTypeData = {
+            labels: ['Online Shopping', 'Bill Payment', 'Transfer', 'Others'],
+            datasets: [{
+                data: [40, 25, 20, 15],
+                backgroundColor: ['#3498db', '#27ae60', '#f39c12', '#e74c3c'],
+                borderWidth: 0
+            }]
+        };
+
+        // Get the canvas element
+        const transactionTypeCanvas = document.getElementById('transactionTypeChart').getContext('2d');
+
+        // Create the transaction type chart using Chart.js
+        const myTransactionTypeChart = new Chart(transactionTypeCanvas, {
+            type: 'pie',
+            data: transactionTypeData,
             options: {
-                scales: {
-                    yAxes: [
-                        {
-                            ticks: {
-                                beginAtZero: false,
-                            },
-                        },
-                    ],
-                },
-            },
+                responsive: true,
+                plugins: {
+                    legend: {
+                        position: 'bottom',
+                        labels: {
+                            boxWidth: 15,
+                            font: {
+                                size: 14,
+                                weight: 'bold'
+                            }
+                        }
+                    },
+                    title: {
+                        display: false
+                    }
+                }
+            }
         });
     </script>
 </body>
