--- a/clients/index.html
+++ b/clients/index.html
@@ -1,70 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Banking App - Recent Transactions</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .header {
-      background-color: #f2f2f2;
-      padding: 20px;
-      text-align: center;
-    }
-    .transaction-list {
-      width: 80%;
-      margin: 20px auto;
-      border-collapse: collapse;
-    }
-    .transaction-list th, .transaction-list td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
-    }
-    .transaction-list th {
-      background-color: #f9f9f9;
-    }
-    .transaction-list tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recent Transactions</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .transaction-container {
+            background-color: #5E3FBE;
+            color: #fff;
+            width: 300px;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .transaction-container:hover {
+            transform: scale(1.05);
+        }
+
+        .transaction-item {
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .transaction-item:last-child {
+            margin-bottom: 0;
+        }
+
+        .transaction-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .transaction-details {
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-
-<div class="header">
-  <h1>Banking App - Recent Transactions</h1>
-</div>
-
-<table class="transaction-list">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Description</th>
-      <th>Amount</th>
-      <th>Transaction Type</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- This section will be populated dynamically with transaction data from the backend -->
-    <!-- Example static data -->
-    <tr>
-      <td>2023-12-25</td>
-      <td>Shopping at ABC Store</td>
-      <td>$50.00</td>
-      <td>Debit</td>
-    </tr>
-    <tr>
-      <td>2023-12-24</td>
-      <td>Online Subscription</td>
-      <td>$20.00</td>
-      <td>Debit</td>
-    </tr>
-    <!-- More transaction rows will be added dynamically -->
-  </tbody>
-</table>
-
+    <div class="transaction-container">
+        <div class="transaction-item">
+            <div class="transaction-title">Transaction 1</div>
+            <div class="transaction-details">Amount: $100</div>
+            <div class="transaction-details">Date: 2024-01-29</div>
+        </div>
+        <div class="transaction-item">
+            <div class="transaction-title">Transaction 2</div>
+            <div class="transaction-details">Amount: $50</div>
+            <div class="transaction-details">Date: 2024-01-28</div>
+        </div>
+        <!-- Add more transaction items as needed -->
+    </div>
 </body>
 </html>
